; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_remote_device.c_scic_sds_remote_device_resetting_state_complete_request_handler.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_remote_device.c_scic_sds_remote_device_resetting_state_complete_request_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SCI_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32*)* @scic_sds_remote_device_resetting_state_complete_request_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @scic_sds_remote_device_resetting_state_complete_request_handler(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i64, i64* @SCI_SUCCESS, align 8
  store i64 %8, i64* %5, align 8
  %9 = load i32*, i32** %4, align 8
  store i32* %9, i32** %6, align 8
  %10 = load i32*, i32** %3, align 8
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i64 @scic_sds_request_complete(i32* %11)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @SCI_SUCCESS, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %29

16:                                               ; preds = %2
  %17 = load i32*, i32** %7, align 8
  %18 = call i32 @scic_sds_remote_device_get_port(i32* %17)
  %19 = load i32*, i32** %7, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i64 @scic_sds_port_complete_io(i32 %18, i32* %19, i32* %20)
  store i64 %21, i64* %5, align 8
  %22 = load i64, i64* %5, align 8
  %23 = load i64, i64* @SCI_SUCCESS, align 8
  %24 = icmp eq i64 %22, %23
  br i1 %24, label %25, label %28

25:                                               ; preds = %16
  %26 = load i32*, i32** %7, align 8
  %27 = call i32 @scic_sds_remote_device_decrement_request_count(i32* %26)
  br label %28

28:                                               ; preds = %25, %16
  br label %29

29:                                               ; preds = %28, %2
  %30 = load i64, i64* %5, align 8
  ret i64 %30
}

declare dso_local i64 @scic_sds_request_complete(i32*) #1

declare dso_local i64 @scic_sds_port_complete_io(i32, i32*, i32*) #1

declare dso_local i32 @scic_sds_remote_device_get_port(i32*) #1

declare dso_local i32 @scic_sds_remote_device_decrement_request_count(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
